Fixed Intro Screen/Added Transition

--- a/src/boardScreen/index.html
+++ b/src/boardScreen/index.html
@@ -8,7 +8,13 @@
     <title>Chess</title>
   </head>
   <body>
-  
+	  
+  <!-- Jason added -->
+	<div id="onLoad">
+		<img src="/images/pawnDesignDash1.png" alt="onLoadImageTransition">
+	</div>
+	<!---->
+
   	<div id="header">
   		<a href="/">Leaderboard</a>
   		<a href="/">History</a>
