--- a/src/startScreen/start.html
+++ b/src/startScreen/start.html
@@ -1174,6 +1174,198 @@
           <img src="/images/pawn.png" alt="pawn" class="piecies">
         </div>
       </div>
+      <div class="row">
+        <div>
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+        </div>       
+        <div>
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+        </div>
+      </div>
+      <div class="row">
+        <div>
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+        </div>       
+        <div>
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+          <img src="/images/rook.png" alt="rook" class="piecies">
+          <img src="/images/bishop.png" alt="bishop" class="piecies">
+          <img src="/images/queen.png" alt="queen" class="piecies">
+          <img src="/images/knight.png" alt="knight" class="piecies">
+          <img src="/images/pawn.png" alt="pawn" class="piecies">
+        </div>
+      </div>
 
       <div class="logo">
         <img id="logoTransition" src="/images/chess.png" alt="LogoImage" class="logoImg">
@@ -1184,11 +1376,11 @@
       <div class="GameName">
         <img id="chessTitle" src="/images/chessLogo.png" height="34" width="78.5" alt="ChessTitle">
       </div>
-
-      <div class="exitButton">
+      <!-- Exit Button not necessary anymore -->
+      <!--<div class="exitButton">
         <img id="closeBtn" src="/images/remove.png" height="34" width="34" alt="exit button">
-      </div>
-
+      </div> -->
+      <!---->
       <div id="loginBack"></div>
 
       <div id="profile">
@@ -1196,16 +1388,13 @@
         <br><br>
         <input type="text" id="username" placeholder="Username" autocomplete="off">
         <!--<label class="profileInput">Username</label>-->
-        <br><br>
-        <input type="text" id="password" placeholder="Password" autocomplete="off">
-        <!--<label class="profilePasswordInput">Password</label>-->
+        <!-- Online login button found -->
+        <br><br><br>
+        <div id="login"><span><a href="#"></a></span></div>
       </div>
 
       <!-- Custom fade animation circle, didnt work, so collapse from sides -->
       <div id="playerTransition" ></div>
-
-      <!-- Online login button found -->
-      <div id="login"><span><a href="#"></a></span></div>
 
       <div id="userCreationButton">
         <label>New User?</label>
@@ -1222,6 +1411,12 @@
         <input type="text" id="newPassword" placeholder="i.e. 123password" autocomplete="off">
         <label class="accountCreationInputsLabel">Email</label>
         <input type="text" id="newEmail" placeholder="i.e. TheLegend27@gmail.com" autocomplete="off">
+      </div>
+
+      <div id="startPageAnimation">
+        <div id="top"></div>
+        <div id="middle"></div>
+        <div id="bottom"></div>
       </div>
 
     </section>
