Added Current Matches and Fixed UI

--- a/src/startScreen/start.html
+++ b/src/startScreen/start.html
@@ -1389,7 +1389,9 @@
         <input type="text" id="username" placeholder="Username" autocomplete="off">
         <!--<label class="profileInput">Username</label>-->
         <!-- Online login button found -->
-        <br><br><br>
+        <br><br>
+        <label id="noUserFound"> - No User Found - </label>
+        <br><br>
         <div id="login"><span><a href="#"></a></span></div>
       </div>
 
@@ -1411,6 +1413,8 @@
         <input type="text" id="newPassword" placeholder="i.e. 123password" autocomplete="off">
         <label class="accountCreationInputsLabel">Email</label>
         <input type="text" id="newEmail" placeholder="i.e. TheLegend27@gmail.com" autocomplete="off">
+        <br><br>
+        <label id="userExists"> - Username already taken - </label>
       </div>
 
       <div id="startPageAnimation">
