Fixed Transition to Board

--- a/src/dashboardScreen/dashboard.html
+++ b/src/dashboardScreen/dashboard.html
@@ -1374,7 +1374,15 @@
 
       <div id="dashBackground">
       </div>
-      
+
+      <div>
+        <img id="logoIcon" src="/images/chess.png" alt="LogoImage">
+      </div>
+
+      <div>
+        <img id="logoImg" src="/images/chessLogo.png" height="34" width="78.5" alt="ChessTitle">
+      </div>
+
       <div id="currentGames" style="background-color: #bbb;">
         <br>
         <h1>Current Games:</h1>
